# crypto_crew

./: .gitignore  README.md  crewai_flow.html  pyproject.toml
db/: chroma.sqlite3
reports/: 1. Metadata.md  2. Technology.md  3. Tokenomics.md  4. Fundraising.md
src/crypto_crew/: crew.py  main.py  workflow.py
src/crypto_crew/config/: agents.yaml  tasks.yaml
src/crypto_crew/tools/: get_cryptorank_fundraising.py  get_cryptorank_vesting.py  get_fundraising.py  get_fundraising_tool.py  get_metadata.py  get_tokenomic_links.py  get_vesting_tool.py  web_search.py
