[project]
name = "crypto_crew"
version = "0.1.0"
description = "crypto_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0"
]

[project.scripts]
crypto_crew = "crypto_crew.main:run"
run_crew = "crypto_crew.main:run"
train = "crypto_crew.main:train"
replay = "crypto_crew.main:replay"
test = "crypto_crew.main:test"
run_flow = "crypto_crew.workflow:main"
plot_flow = "crypto_crew.workflow:plot_flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
